--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./CSS/style.css">
 </head>
 <body>
+<!--      12 column layout with different row   -->
     <h1 class="h1 text-center">12 Column Layouts</h1>
     <h1 class="h1 text-center">1</h1>
     <div class="container">
